--- a/index.html
+++ b/index.html
@@ -108,29 +108,29 @@
                         <h3 style = "font-size: 2.5rem;">Objetivo de construir esta pagina.</h3>
                      </div>
                      <p style=" margin-bottom: 76px;">
-                        Seu principal objetivo é mostrar e tambem divulgar a quem visitar a pagina, meus projetos já criados por mim (incluindo este proprio site que esta visitando)
+                        O objetivo principal é mostrar e tambem divulgar esta pagina, junto com meus projetos já criados por mim (incluindo este proprio)
                         ou minha participação em alguma trabalho em equipes de desenvolvedores.
                      </p>
                   </div>
                   <div class="container clearfix">
                      <div class="fancy-title title-bottom-border">
-                        <h3 style = "font-size: 2.5rem;">Qual o meu objetivo para tudo isso ??</h3>
+                        <h3 style = "font-size: 2.5rem;">Qual o meu objetivo para tudo isso ?</h3>
                      </div>
                      <p style=" margin-bottom: 76px;">
-                        A resposta é simples...estou procurando trabalho. Estou procurando emprego como desenvolvedor, 
-                        seria meu primeiro emprego registrado como desenvolvedor junior e muitas vagas exigem um alto nivel de conhecimento
-                        de diversas linguagens e frameworks, para isso veio a ideia de criar este "Cartão de visita " por esse meio mostrar 
+                        Atualmente estou procurando emprego seria meu primeiro emprego registrado como desenvolvedor.
+                        Hoje muitas vagas exigem um alto nivel de conheciment de diversas linguagens e frameworks, 
+                        por esse motivo que tive a ideia de criar este "Cartão de visita " para mostrar 
                         minha experiencia das linguagens usadas e seu processo no decorrer de cada projeto. 
                      </p>
                   </div>
                   <div class="container clearfix">
                      <div class="fancy-title title-bottom-border">
-                        <h3 style = "font-size: 2.5rem;">Qual projeto estou atualmente.</h3>
+                        <h3 style = "font-size: 2.5rem;">Projeto estou atualmente.</h3>
                      </div>
                      <p style=" margin-bottom: 76px;">
                         Atualmente estou atuando com uma equipe de desenvolvedores na criação de um site já em produção para a empresa ABEU (https://www.abeu.org.br/) empresa que atua no desenvolvimento da cultura editorial universitária fornecendo soluções,
-                        produtos e serviços adequados às necessidades dos associados, das instituições parceiras e dos leitores, junto de uma equipe de desenvolvimento, onde foi desenvolvido o site usando linguagem de programação Python, um micro-framework da linguagem django, Wagtail, a ideia de criar a pagina usando 
-                        wagtail é a função de liberdade para que o próprio usuário possa ter total acesso na criação de novos usuário e criação de novas paginas e edição de Templates, sem depender da interferência do desenvolvedor.
+                        produtos e serviços adequados às necessidades dos associados, das instituições parceiras e dos leitores, junto de uma equipe de desenvolvimento, onde foi desenvolvido o site usando linguagem de programação Python, um micro-framework da linguagem django, 
+                        Wagtail, a ideia de criar a pagina usando wagtail é a função de liberdade para que o próprio usuário possa ter total acesso na criação de novos usuário e criação de novas paginas e edição de Templates, sem depender da interferência do desenvolvedor.
                      </p>
                   </div>
                
