modificado template das paginas

--- a/about_me.html
+++ b/about_me.html
@@ -24,7 +24,7 @@
       <!-- Document Wrapper -->
       <div id="wrapper" class="clearfix">
          <!-- Top Bar -->
-         <div id="top-bar">
+         <div id="top-bar" class="dark" data-scrollto-settings="{&quot;offset&quot;:140,&quot;speed&quot;:1250,&quot;easing&quot;:&quot;easeOutQuad&quot;}">
             <div class="container clearfix">
                <div class="row justify-content-between">
                   <div class="col-12 col-md-auto">
@@ -101,7 +101,7 @@
          <!-- content -->
          <!-- Footer -->
          <!-- Footer -->
-      <footer id="footer" class="dark" data-scrollto-settings="{&quot;offset&quot;:140,&quot;speed&quot;:1250,&quot;easing&quot;:&quot;easeOutQuad&quot;}" style="margin-top: 171px;">
+      <footer id="footer" class="dark" data-scrollto-settings="{&quot;offset&quot;:140,&quot;speed&quot;:1250,&quot;easing&quot;:&quot;easeOutQuad&quot;}" style="margin-top: 369px;">
       <!-- Copyrights
          ============================================= -->
       <div id="copyrights">
