--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <!-- Document Wrapper -->
       <div id="wrapper" class="clearfix">
       <!-- Top Bar -->
-      <div id="top-bar">
+      <div id="top-bar" class="dark" data-scrollto-settings="{&quot;offset&quot;:140,&quot;speed&quot;:1250,&quot;easing&quot;:&quot;easeOutQuad&quot;}">
          <div class="container clearfix">
             <div class="row justify-content-between">
                <div class="col-12 col-md-auto">
@@ -93,7 +93,7 @@
                <div class="container-fluid py-5">
                   <div class="heading-block text-center border-bottom-0">
                      <h2 style = "font-size: 71px;">Sejam Bem-Vindos</h2>
-                     <p class="d-none d-sm-block fadeInUp animated" data-animate="fadeInUp" data-delay="400">Este é um site criado por mim para que possam ver melhor meu trabalho como desenvolvedor </p>
+                     <p class="d-none d-sm-block fadeInUp animated" data-animate="fadeInUp" data-delay="400">O objetivo principal é de divulgar esta pagina, junto com meus projetos (incluindo este próprio) ou com projetos que minha participação com outros desenvolvedores. </p>
                   </div>
                </div>
             </div>
@@ -105,32 +105,18 @@
                <div class="row">
                   <div class="container clearfix">
                      <div class="fancy-title title-bottom-border">
-                        <h3 style = "font-size: 2.5rem;">Objetivo de construir esta pagina.</h3>
-                     </div>
-                     <p style=" margin-bottom: 76px;">
-                        O objetivo principal é mostrar e tambem divulgar esta pagina, junto com meus projetos já criados por mim (incluindo este proprio)
-                        ou minha participação em alguma trabalho em equipes de desenvolvedores.
-                     </p>
-                  </div>
-                  <div class="container clearfix">
-                     <div class="fancy-title title-bottom-border">
                         <h3 style = "font-size: 2.5rem;">Qual o meu objetivo para tudo isso ?</h3>
                      </div>
                      <p style=" margin-bottom: 76px;">
-                        Atualmente estou procurando emprego seria meu primeiro emprego registrado como desenvolvedor.
-                        Hoje muitas vagas exigem um alto nivel de conheciment de diversas linguagens e frameworks, 
-                        por esse motivo que tive a ideia de criar este "Cartão de visita " para mostrar 
-                        minha experiencia das linguagens usadas e seu processo no decorrer de cada projeto. 
+                        Atualmente estou procurando emprego, seria meu primeiro emprego registrado como desenvolvedor. Hoje muitas vagas exigem um alto nível de conhecimento de diversas linguagens e Framework, por esse motivo, que tive a ideia de criar este "Cartão de visita " para mostrar tanto para recrutadores minha experiencia das linguagens usadas, e seu processo no decorrer de cada projeto.
                      </p>
                   </div>
                   <div class="container clearfix">
                      <div class="fancy-title title-bottom-border">
-                        <h3 style = "font-size: 2.5rem;">Projeto estou atualmente.</h3>
+                        <h3 style = "font-size: 2.5rem;">Meu projeto atual. </h3>
                      </div>
                      <p style=" margin-bottom: 76px;">
-                        Atualmente estou atuando com uma equipe de desenvolvedores na criação de um site já em produção para a empresa ABEU (https://www.abeu.org.br/) empresa que atua no desenvolvimento da cultura editorial universitária fornecendo soluções,
-                        produtos e serviços adequados às necessidades dos associados, das instituições parceiras e dos leitores, junto de uma equipe de desenvolvimento, onde foi desenvolvido o site usando linguagem de programação Python, um micro-framework da linguagem django, 
-                        Wagtail, a ideia de criar a pagina usando wagtail é a função de liberdade para que o próprio usuário possa ter total acesso na criação de novos usuário e criação de novas paginas e edição de Templates, sem depender da interferência do desenvolvedor.
+                        No momento estou atuando com uma equipe de desenvolvedores, na criação de um site já em produção para a empresa ABEU (https://www.abeu.org.br/), empresa essa que atua no desenvolvimento da cultura editorial universitária, fornecendo soluções produtos e serviços adequados às necessidades dos associados das instituições parceiras e dos leitores, foi desenvolvido o site usando linguagem de programação Python, um micro-framework da linguagem Django chamado  Wagtail, a ideia de criar a pagina usando Wagtail é  que com ela é dada a liberdade para que o próprio usuário possa ter total acesso na criação de novos usuário e criação de novas paginas e sua edição, sem depender da interferência do desenvolvedor.
                      </p>
                   </div>
                
