--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                            <div class="col-sm-3 col-lg-2">
                               <div class="feature-box fbox-plain">
                                  <div class="fbox-icon">
-                                    <a href="#"><i class="icon-css3-alt"></i></a>
+                                    <a href="#"><i class="icon-git-square"></i></a>
                                  </div>
                                  <div class="fbox-content">
                                  
