atualizando pagina meus projetos

--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
                      height: 285px;
                      ">
                   <h2>Felipe Rogério Carneiro</h2>
-                  <span>Desenvolvedor.</span>
+                  <span>Desenvolvedor</span>
+                  <span>São Paulo,Brasil</span>
                   <span>25 anos</span>
                </div>
                <h3 class="center">Experiencia com linguagens:</h3>
@@ -143,7 +144,7 @@
                   <div class="toggle-header">
 
                      <div class="toggle-title">
-                        <h4 class="center">framework web :</h4>
+                        <h4 class="center">Framework web :</h4>
                      </div>
                   </div>
                   <div class="toggle-content" style="display: none;">
@@ -191,7 +192,7 @@
                         <div class="col-sm-3 col-lg-2">
                            <div class="feature-box fbox-plain">
                               <div class="fbox-icon">
-                                 <a href="#"><i class="icon-css3-alt"></i></a>
+                                <i class="icon-css3-alt"></i>
                               </div>
                               <div class="fbox-content">
                                  <h3>CSS</h3>
@@ -206,7 +207,7 @@
                      <div class="toggle-header">
 
                         <div class="toggle-title">
-                           <h4 class="center">experiencia tambem com:</h4>
+                           <h4 class="center">Experiencia tambem com:</h4>
                         </div>
                      </div>
                      <div class="toggle-content" style="display: none;">
@@ -214,7 +215,7 @@
                            <div class="col-sm-3 col-lg-2">
                               <div class="feature-box fbox-plain">
                                  <div class="fbox-icon">
-                                    <a href="#"><i class="icon-css3-alt"></i></a>
+                                    <img src="https://img.icons8.com/color/48/000000/git.png"/>
                                  </div>
                                  <div class="fbox-content">
                                  
@@ -229,6 +230,16 @@
                                  </div>
                                  <div class="fbox-content">
                                     <h3>Docker</h3>
+                                 </div>
+                              </div>
+                           </div>
+                           <div class="col-sm-3 col-lg-2">
+                              <div class="feature-box fbox-plain">
+                                 <div class="fbox-icon">
+                                    <img src="https://img.icons8.com/color/48/000000/ubuntu--v1.png"/>
+                                 </div>
+                                 <div class="fbox-content">
+                                    <h3>Linux</h3>
                                  </div>
                               </div>
                            </div>
