--- a/meus_projetos.html
+++ b/meus_projetos.html
@@ -95,7 +95,61 @@
                 <div class="row col-mb-50">
                     <div class="col-md-7">
                         <div class="fancy-title title-bottom-border">
-                           <h3>Nome do projeto: Carta de Apresentação</h3>
+                           <h3>Nome do projeto:ABEU</h3>
+                        </div>
+                        <p>Sobre o Projeto:</p>
+                        <p>Atuando em colaboração com uma equipe de desenvolvedores, na criação de um site já em produção para a empresa ABEU, 
+                         empresa essa que atua no desenvolvimento da cultura editorial universitária, fornecendo soluções
+                         produtos e serviços adequados às necessidades dos associados das instituições parceiras e dos leitores, foi desenvolvido o 
+                         site usando linguagem de programação Python, um micro-framework da linguagem Django chamado  Wagtail, a ideia de criar a pagina 
+                         usando Wagtail é  que com ela é dada a liberdade para que o próprio usuário possa ter total acesso na criação de novos usuário e 
+                         criação de novas paginas e sua edição, sem depender da interferência do desenvolvedor.</p>
+                        <div class="accordion accordion-bg">
+                           <div class="accordion-header accordion-active">
+                              <div class="accordion-icon">
+                                 <i class="accordion-closed icon-ok-circle"></i>
+                                 <i class="accordion-open icon-remove-circle"></i>
+                              </div>
+                              <div class="accordion-title">
+                                 Linguagens/Ferramentas Utilizadas
+                              </div>
+                           </div>
+                           <div class="accordion-content" style="display: block;">
+                              <ul class="iconlist iconlist-color mb-0">
+                                 <li><img src="https://img.icons8.com/color/30/000000/python--v1.png"/>Python</li>
+                                 <li><img src="https://img.icons8.com/material-sharp/30/000000/django.png"/>Django</li>
+                                 <li>Wagtail</li>
+                                 <li><img src="https://img.icons8.com/ios-glyphs/30/000000/html-5.png"/>HTML 5</li>
+                                 <li><img src="https://img.icons8.com/color/30/000000/javascript--v1.png"/>JavaScript</li>
+                                 <li><img src="https://img.icons8.com/ios-glyphs/30/000000/css3.png"/>CSS</li>
+                                 <li><img src="https://img.icons8.com/color/30/000000/gitlab.png"/>Gitlab</li>
+                                 <li><img src="https://img.icons8.com/fluency/30/000000/docker.png"/>Docker</li>
+                              </ul>
+                           </div>
+                           <div class="accordion-header">
+                              <div class="accordion-icon">
+                                 <i class="accordion-closed icon-ok-circle"></i>
+                                 <i class="accordion-open icon-remove-circle"></i>
+                              </div>
+                              <div class="accordion-title">
+                                 Minha experiencia tirada com este projeto
+                              </div>
+                           </div>
+                           <div class="accordion-content" style="display: none;"> Este projeto foi meu maior desafio de varias maneiras, 
+                              tanto como meu primeiro projeto oficial para uma empresa, quanto com uma equipe de programadores experientes.
+                              Foi a partir dele que tive meu primeiro contato pratico com Docker quanto tambem com Django,Wagtail.
+                              Por muitas vezes, para conseguir acompanhar os processos e a equipe, precisei dar tudo de mim quanto aos meus estudos individuais, 
+                              sempre tendo o auxilio deles quanto ao que estudar e por onde começar, sempre me aprimorando conseguindo contribuir de varias maneiras para o desenvolvimento no projeto,
+                               sendo ele back-end e front-end.
+                           </div>
+                        </div>
+                        <a href="https://www.abeu.org.br/" data-scrollto="#job-apply" class="button button-3d button-black m-0"><img src="https://img.icons8.com/windows/32/000000/python-file.png"/>Projeto Já em produção</a>
+                    </div>
+
+
+                    <div class="col-md-7">
+                        <div class="fancy-title title-bottom-border">
+                           <h3>Nome do projeto:Minha Carta de Apresentação</h3>
                         </div>
                         <p>Sobre o Projeto:</p>
                         <p>Ele foi desenvolvido para contar um pouco sobre meu profissional, como programador, desmontrando minha experiencia como desenvolvedor para os recrutadores e para outros profissionais. </p>
@@ -123,10 +177,12 @@
                                  <i class="accordion-open icon-remove-circle"></i>
                               </div>
                               <div class="accordion-title">
-                                 Minha tirada com este projeto
+                                 Minha experiencia tirada com este projeto
                               </div>
                            </div>
-                           <div class="accordion-content" style="display: none;"> texto</div>
+                           <div class="accordion-content" style="display: none;">Este projeto foi colocado tudo em pratica que aprendi com o projeto ABEU
+                            em relação a html,css,javascript, começou como apenas uma carta de apresentação, para que os recrutadores possam ver minha experiencia profissional como programador,mas acabou virando um curriculo mais elaborado, descrevendo mais sobre minha experiencia.
+                           </div>
                         </div>
                         <a href="https://github.com/Felipe9622/carta_de_apresentacao" data-scrollto="#job-apply" class="button button-3d button-black m-0"><img src="https://img.icons8.com/color/30/000000/html-filetype--v2.png"/>Projeto completo</a>
                     </div>
@@ -152,6 +208,7 @@
                                  <li><img src="https://img.icons8.com/color/30/000000/python--v1.png"/>Python</li>
                                  <li><img src="https://img.icons8.com/fluency/30/000000/selenium-test-automation.png"/>Selenium</li>
                                  <li><img src="https://img.icons8.com/ios-glyphs/30/000000/ophthalmology.png"/>Webdriver Beautifulsoup</li>
+                                 <li><img src="https://img.icons8.com/color/30/000000/microsoft-excel-2019--v1.png"/>Excel</li>
                                  <li><img src="https://img.icons8.com/ios-glyphs/30/000000/github.png"/>Github</li>
                               </ul>
                            </div>
@@ -161,10 +218,50 @@
                                  <i class="accordion-open icon-remove-circle"></i>
                               </div>
                               <div class="accordion-title">
-                                 Minha tirada com este projeto
+                                 Minha experiencia tirada com este projeto
                               </div>
                            </div>
-                           <div class="accordion-content" style="display: none;"> texto</div>
+                           <div class="accordion-content" style="display: none;">Este projeto foi para colocar em pratica meus estudos em selenium em pratico, conseguindo acessar mais de um pagina e extraindo os dados selecionados. </div>
+                        </div>
+                        <a href="https://github.com/Felipe9622/portifolio-de-projetos/tree/master/Web_scraping/Extra%C3%A7%C3%A3o_de_dados_com_selenium" data-scrollto="#job-apply" class="button button-3d button-black m-0"><img src="https://img.icons8.com/windows/32/000000/python-file.png"/>Projeto completo</a>
+                    </div>
+
+                    <div class="col-md-7">
+                        <div class="fancy-title title-bottom-border">
+                           <h3>Nome do projeto: Extração de dados</h3>
+                        </div>
+                        <p>Sobre o Projeto:</p>
+                        <p>O objetivo deste projeto é colocar em pratica meu conhecimento ao uso da linguagem python,
+                         junto com o webdriver beautifulsoup usando como base o site https://torrentool.org/ com a função de extrair todos os filmes
+                          da primeira pagina  </p>
+                        <div class="accordion accordion-bg">
+                           <div class="accordion-header accordion-active">
+                              <div class="accordion-icon">
+                                 <i class="accordion-closed icon-ok-circle"></i>
+                                 <i class="accordion-open icon-remove-circle"></i>
+                              </div>
+                              <div class="accordion-title">
+                                 Linguagens/Ferramentas Utilizadas
+                              </div>
+                           </div>
+                           <div class="accordion-content" style="display: block;">
+                              <ul class="iconlist iconlist-color mb-0">
+                                 <li><img src="https://img.icons8.com/color/30/000000/python--v1.png"/>Python</li>
+                                 <li><img src="https://img.icons8.com/ios-glyphs/30/000000/ophthalmology.png"/>Webdriver Beautifulsoup</li>
+                                 <li><img src="https://img.icons8.com/color/30/000000/microsoft-excel-2019--v1.png"/>Excel</li>
+                                 <li><img src="https://img.icons8.com/ios-glyphs/30/000000/github.png"/>Github</li>
+                              </ul>
+                           </div>
+                           <div class="accordion-header">
+                              <div class="accordion-icon">
+                                 <i class="accordion-closed icon-ok-circle"></i>
+                                 <i class="accordion-open icon-remove-circle"></i>
+                              </div>
+                              <div class="accordion-title">
+                                 Minha experiencia tirada com este projeto
+                              </div>
+                           </div>
+                           <div class="accordion-content" style="display: none;">Com este projeto pude aprimorar meu conhecimento com o webdriver beautifulsoup usando como base o site https://torrentool.org/ para fazer a extração dos dados da pagina e convertendo os dados para excel.</div>
                         </div>
                         <a href="https://github.com/Felipe9622/portifolio-de-projetos/tree/master/Web_scraping/Extra%C3%A7%C3%A3o_de_dados_com_selenium" data-scrollto="#job-apply" class="button button-3d button-black m-0"><img src="https://img.icons8.com/windows/32/000000/python-file.png"/>Projeto completo</a>
                     </div>
