Atualização das paginas

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                            </a>
                         </li>
                         <li class="menu-item">
-                           <a class="menu-link" href="meus_projetos.html" style="padding-top: 39px; padding-bottom: 39px;">
+                           <a class="menu-link" href="my_projects.html" style="padding-top: 39px; padding-bottom: 39px;">
                               <div>Meus Projetos</div>
                            </a>
                         </li>
