--- a/about_me.html
+++ b/about_me.html
@@ -68,12 +68,12 @@
                               </a>
                            </li>
                            <li class="menu-item">
-                              <a class="menu-link" href="documentos/Curriculo.pdf" style="padding-top: 39px; padding-bottom: 39px;">
+                              <a class="menu-link" href="documentos/CV_Felipe_Carneiro.pdf" style="padding-top: 39px; padding-bottom: 39px;">
                                  <div>Curriculo</div>
                               </a>
                            </li>
                            <li class="menu-item">
-                              <a class="menu-link" href="https://gitlab.com/felipe_carneiro" style="padding-top: 39px; padding-bottom: 39px;">
+                              <a class="menu-link" href="my_projects.html" style="padding-top: 39px; padding-bottom: 39px;">
                                  <div>Meus Projetos</div>
                               </a>
                            </li>
