--- a/my_projects.html
+++ b/my_projects.html
@@ -138,9 +138,7 @@
                            <div class="accordion-content" style="display: none;"> Este projeto foi meu maior desafio de varias maneiras, 
                               tanto como meu primeiro projeto oficial para uma empresa, quanto com uma equipe de programadores experientes.
                               Foi a partir dele que tive meu primeiro contato pratico com Docker quanto tambem com Django,Wagtail.
-                              Por muitas vezes, para conseguir acompanhar os processos e a equipe, precisei dar tudo de mim quanto aos meus estudos individuais, 
-                              sempre tendo o auxilio deles quanto ao que estudar e por onde começar, sempre me aprimorando conseguindo contribuir de varias maneiras para o desenvolvimento no projeto,
-                               sendo ele back-end e front-end.
+                              Por muitas vezes, para conseguir acompanhar os processos e a equipe, precisei dar tudo de mim quanto aos meus estudos individuais.
                            </div>
                         </div>
                         <a href="https://www.abeu.org.br/" data-scrollto="#job-apply" class="button button-3d button-black m-0"><img src="https://img.icons8.com/windows/32/000000/python-file.png"/>Projeto Já em produção</a>
