--- a/about_me.html
+++ b/about_me.html
@@ -63,8 +63,8 @@
                      <nav class="primary-menu">
                        <ul class="menu-container one-page-menu">
                            <li class="menu-item">
-                              <a class="menu-link" href="about_me.html" style="padding-top: 39px; padding-bottom: 39px;">
-                                 <div>Carta de Apresentação</div>
+                              <a class="menu-link" href="index.html" style="padding-top: 39px; padding-bottom: 39px;">
+                                 <div>Pagina principal</div>
                               </a>
                            </li>
                            <li class="menu-item">
@@ -91,47 +91,16 @@
             <div class="heading-block center">
                <h2>Carta de Apresentação</h2>
             </div>
-            <p style=" text-align: center; padding: 0px 48px 0.75rem;">Tenho interesse em atuar como desenvolvedor junior, sou focado e comprometido e seria de grande contribuição para sua empresa, estudo linguagem python3 se especializando no estudo e aprimoramento na linguagem. 
-                 Realizando pequenos projetos para estudo, participando tambem de alguns projetos com outros desenvolvedores mais experientes me aprimorando e adiquirindo experiencia com desenvolvimento back-end (python3) 
-                 front-end (html/css) e framework (django) adotando o uso de git para controle de acesso, usando sistema operacional linux.
-                 
+            <p style="text-align: center;padding: 23px 34px 0.75rem;">Procuro oportunidade como desenvolvedor junior, estudo  linguagem Python (desde 2019) me 
+            especializando no estudo e aprimoramento na linguagem. 
+            Realizando pequenos projetos para estudo, participando também de alguns projetos com outros 
+            desenvolvedores experiencia no uso da linguagem, com desenvolvimento web HTML5 e CSS3, framework Django, ferramentas de banco de dados como SQLite3, tenho conhecimento no uso de Docker, adotando o uso de Git para controle de acesso, 
+            usando sistema operacional Linux.
             </p>
-
          </section>
          <!-- content -->
          <!-- Footer -->
          <!-- Footer -->
-      <footer id="footer" class="dark" data-scrollto-settings="{&quot;offset&quot;:140,&quot;speed&quot;:1250,&quot;easing&quot;:&quot;easeOutQuad&quot;}" style="margin-top: 369px;">
-      <!-- Copyrights
-         ============================================= -->
-      <div id="copyrights">
-      <div class="container">
-      <div class="row justify-content-between col-mb-30">
-      <div class="col-12 col-lg-auto text-center text-lg-start order-last order-lg-first">
-      Felipe Carneiro.
-      </div>
-      <div class="col-12 col-lg-auto text-center text-lg-end">
-      <div class="copyrights-menu copyright-links">
-      <a href="index.html">Voltar para pagina principal</a>
-      </div>
-      <a href="https://gitlab.com/felipe_carneiro" class="social-icon inline-block si-small si-borderless mb-0 si-github">
-      <i class="icon-gitlab"></i>
-      <i class="icon-gitlab"></i>
-      </a>
-      <a href="https://www.linkedin.com/in/felipe-carneiro-728693149/" class="social-icon inline-block si-small si-borderless mb-0 si-linkedin">
-      <i class="icon-linkedin"></i>
-      <i class="icon-linkedin"></i>
-      </a>
-      <a href="https://github.com/Felipe9622" class="social-icon inline-block si-small si-borderless mb-0 si-github">
-      <i class="icon-github-circled"></i>
-      <i class="icon-github-circled"></i>
-      </a>
-      </div>
-      </div>
-      </div>
-      </div>
-      <!-- #copyrights end -->
-      </footer>
       <!-- footer end -->
       </div>
       <!-- #wrapper end -->
